fix(video): aligned to design & addressed youtube loading issue (#307)
* feat(video-promo-qa): video promo component UI fixes and multiple youtube issue fixes

* feat(video-promo-qa): lint fixes

* feat(video-promo-qa):Design review comments

* feat(video-promo-qa):Design review comments

* fix(video): Review comments fixes

* fix(video):Linting issues

* fix(video): Design comments addressed

---------

--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -1,5 +1,14 @@
 .video.block > div:not(.video-modal) {
-    display: block;
+    display: flex;
+    flex-direction: column;
+}
+
+main > .section.video-promo-wrapper > div:last-child {
+    padding-bottom: unset;
+}
+
+main > .section.video-promo-wrapper > div:first-child {
+    padding-top: unset;
 }
 
 .video.block > div:not(.video-modal) > div {
@@ -7,46 +16,41 @@
     color: var(--neutral-white);
 }
 
-.video.block > div:not(.video-modal) > div:only-child {
-    background-color: unset;
-    border-radius: 20px;
-}
-
 .video.block.dark > div:not(.video-modal) > div {
     background-color: var(--neutral-carbon);
 }
 
-.video.block > div:not(.video-modal) > .video-title > p {
-    font-size: var(--font-size-16);
+.video.block > div:not(.video-modal) > div:only-child {
+    background-color: unset;
+    border-radius: var(--spacer-element-06);
 }
 
-.video.block > div:not(.video-modal) > div > h2 {
-    margin: var(--spacer-layout-02) 0 ;
+main > .section.video-promo-wrapper > div.video-wrapper {
+    width: unset;
 }
 
-.video.block > div:not(.video-modal) > .video-title {
-    color: inherit;
+.video.block > div:not(.video-modal) > div > p:first-of-type, .video.block > div:not(.video-modal) > div > p:first-of-type > code {
+    text-transform: uppercase;
+    font-family: var(--sans-serif-font-medium);
+    font-size: var(--font-size-11);
+    font-weight: var(--font-weight-medium);
+    line-height: var(--line-height-120);
+    letter-spacing: var(--letter-spacing-02-em);
+    margin: 0;
 }
 
 .video.block > div:not(.video-modal) > div > p:last-of-type {
-    margin-bottom: var(--spacer-layout-05);
+    margin: 0;
 }
 
-.video.block > div:not(.video-modal) > .video-title > p:last-of-type {
-    margin: var(--spacer-layout-01) 0 0 0;
-}
-
-.video.block > div:not(.video-modal) > div.video-text > p:first-of-type {
-    margin-top: var(--spacer-layout-05);
-    text-transform: uppercase;
-    font-size: var(--font-size-11);
-    font-weight: 500;
-    line-height: var(--line-height-120);
-    letter-spacing: var(--letter-spacing-02-em);
+.video.block > div:not(.video-modal) > div > h2 {
+    margin: var(--spacer-element-07) 0 ;
 }
 
 .video.block .video-image {
+    order: 1;
     position: relative;
+    width: 100%;
 }
 
 .video.block .video-image .open-video {
@@ -54,9 +58,10 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 96px;
-    height: 96px;
-    max-height: 96px;
+    width: var(--spacer-layout-06);
+    height: var(--spacer-layout-06);
+    max-height: var(--spacer-layout-06);
+    font-size: 14px;
     visibility: visible;
     background-color: var(--primary-purple);
     color: var(--neutral-white);
@@ -79,32 +84,111 @@
     content: '';
     background: url('./../../icons/play-button.svg') no-repeat;
     background-size: contain;
-    height: 16px;
+    height: var(--spacer-element-05);
     width: 10px;
-    margin-left: 12px;
+    margin-left: var(--spacer-element-04);
 }
 
 .video.block .video-text {
+    order: 2;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0 var(--spacer-layout-02);
+    padding: var(--spacer-layout-05) var(--spacer-element-07) var(--spacer-layout-06) var(--spacer-element-07);
+    width: 100%;
 }
 
 .video.block img {
+    display: block;
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
 @media (min-width: 768px) {
+    .video.block .video-image {
+        order: unset;
+    }
+
+    .video.block .video-text {
+        max-width: 728px;
+        order: unset;
+    }
+
+    .video.block .video-text:not(.text-left) {
+        padding: var(--spacer-layout-05) var(--spacer-element-08) var(--spacer-layout-05) var(--spacer-element-06);
+    }
+
+    .video.block .video-text.text-left {
+        padding: var(--spacer-layout-05) var(--spacer-element-06) var(--spacer-layout-05) var(--spacer-layout-036);
+    }
+
     .video.block > div:not(.video-modal) {
         display: flex;
-        width: 100%
+        flex-direction: row;
+        width: 100%;
+        justify-content: center;
     }
 
-    .video.block > div:not(.video-modal) > div {
-        flex: 1;
+    main > .section.video-promo-wrapper > div:last-child {
+        padding-bottom: unset;
     }
 
+    main > .section.video-promo-wrapper > div:first-child {
+        padding-top: unset;
+    }
+
+    main > .section.video-promo-wrapper > div.video-wrapper {
+        width: unset;
+    }
+}
+
+@media (min-width: 1200px) {
+    .video.block > div:not(.video-modal) > div > p:first-of-type, .video.block > div:not(.video-modal) > div > p:first-of-type > code {
+        font-size: var(--font-size-14);
+    }
+
+    .video.block .video-text {
+        max-width: 728px;
+    }
+
+    .video.block > div:not(.video-modal) > div > h2 {
+        margin: var(--spacer-element-08) 0 ;
+    }
+
+    .video.block .video-text:not(.text-left) {
+        padding: var(--spacer-layout-07) 148px var(--spacer-layout-07) 120px;
+    }
+
+    .video.block .video-text.text-left {
+        padding: var(--spacer-layout-07) 112px var(--spacer-layout-07) var(--spacer-layout-156);
+    }
+
+    .video.block .video-image .open-video {
+        width: 124px;
+        height: 124px;
+        max-height: 124px;
+        font-size: var(--font-size-18);
+    }
+
+    main > .section.video-promo-wrapper > div:last-child {
+        padding-bottom: unset;
+    }
+
+    main > .section.video-promo-wrapper > div:first-child {
+        padding-top: unset;
+    }
+
+    .video.block .video-image.single-video {
+        max-width: 744px;
+        max-height: 420px;
+    }
+
+    .video.block .video-image {
+        max-width: 710px;
+    }
+
+    main > .section.video-promo-wrapper > div.video-wrapper {
+        width: unset;
+    }
 }
